--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "classnames": "^2.5.1",
     "next": "15.3.1",
     "react": "^19.0.0",
